# sanskrit_vowel_mathematical_waveform

./: .gitignore  .kiro_exec.sh  Cargo.toml  README.md  THEME_MAPPING.md  evaluation_results_full.csv  evaluation_results_self_accuracy.csv  raw-audio-data-source.md  tmp8xuk9_l_.tmp-Frag1  ui-ux-rule.md  verify_implementation.sh
.kiro/specs/frequency-shape-visualizer/: design.md  requirements.md  (+1 more)
config/: dhvani_config.toml  download_speech_audio_links.csv
data/03_augmented/: augmentation_log.csv
data/05_patterns/: अ.dbp  अं.dbp  अः.dbp  आ.dbp  इ.dbp  ई.dbp  उ.dbp  ऊ.dbp  ऋ.dbp  ऌ.dbp  ए.dbp  ऐ.dbp  ओ.dbp  औ.dbp  ॠ.dbp  ॡ.dbp
scripts/: 01_normalize_audio.py  03_extract_clean_samples.py  04_augment_data.py  05_build_master_pattern.py  06_probe_patterns.py  07_evaluate_patterns.py  08_analyze_self_accuracy.py  09_analyze_full_results.py  adjust_labels.py  analyze_single_audio.py  download_speech_audio.py  gaf_analysis.py  mel_spectrogram_analysis.py  phase_space_analysis.py  phase_space_analysis_2d.py  phase_space_analysis_3d.py  poincare_section_analysis.py  refine_labels.py  tda_barcode_analysis.py  test.py  traial.py  visibility_graph_analysis.py  wavelet_scalogram_analysis.py
scripts/analyses/: phase_space_analysis_2d.py  phase_space_analysis_3d.py  poincare_section_analysis.py
scripts/verification/: check_weighting_bias.py
src/: audio.rs  config.rs  main.rs  state_machine.rs
src/models/: gmm.rs  mod.rs  onnx.rs
web-app/: DESIGN_AND_PRODUCT_DOC.md  TODO.md  components.json  package-lock.json  package.json  vite.config.ts
web-app/src/: app.css  app.html
(+118 files in other folders)
