[package]
name = "sanskrit_vowel_mathematical_waveform"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.99"
apodize = "1.0.0"
byteorder = "1.5.0"
clap = { version = "4.5.46", features = ["derive"] }
colored = "3.0.0"
cpal = "0.15.2"
crossterm = "0.29.0"
half = { version = "2.6.0", features = ["use-intrinsics"] }
nalgebra = "0.34.0"
ndarray = "0.16.1"
realfft = "3.5.0"
rustdct = "0.7.1"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.5"
tract-onnx = "0.22.0"
